@@ -4,6 +4,7 @@
 	(build_list_from_attribute_strings): New function.
 	(Connection_getPrinterAttributes): Implemented.
 	(Connection_setPrinterJobSheets): Implemented.
+	(Connection_setPrinterErrorPolicy): Implemented.
 
 2006-02-23  Tim Waugh  <twaugh@redhat.com>
 
